# krunner-pass

./: CHANGELOG.md  CMakeLists.txt  README.md  config.cpp  config.h  config.ui  install.sh  pass.cpp  pass.h  pass.json.in  uninstall.sh
